--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "burger-builder",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://purrrplelipton.github.io/burger-builder",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -19,6 +22,7 @@
     "@vitejs/plugin-react": "^2.1.0",
     "eslint": "^8.23.1",
     "eslint-plugin-react": "^7.31.8",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.7.1",
     "vite": "^3.1.0"
   }
