--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "latest",
+    "axios": "^1.5.0",
     "cors": "^2.8.5",
-    "prop-types": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
+    "redux": "^4.2.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@vitejs/plugin-react-swc": "latest",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "bun-types": "latest",
-    "eslint": "latest",
-    "eslint-config-airbnb": "latest",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsx-a11y": "latest",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "latest",
-    "prettier": "latest",
-    "vite": "latest"
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^3.0.3",
+    "vite": "^4.4.9"
   }
 }
