--- a/package.json
+++ b/package.json
@@ -1,38 +1,32 @@
 {
-  "name": "burger-builder",
-  "private": true,
-  "version": "0.5.0",
-  "homepage": "https://github.com/purrrplelipton/burger-builder.git",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.5.0",
-    "cors": "^2.8.5",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "bun-types": "latest",
-    "eslint": "^8.50.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3",
-    "vite": "^4.4.9"
-  }
+	"name": "burger-builder",
+	"private": true,
+	"version": "0.1.0",
+	"type": "module",
+	"scripts": {
+		"dev": "NODE_ENV=development vite",
+		"build": "vite build",
+		"preview": "NODE_ENV=production vite preview"
+	},
+	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.7",
+		"axios": "^1.5.0",
+		"cors": "^2.8.5",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-redux": "^8.1.2",
+		"react-router-dom": "^6.16.0",
+		"redux": "^4.2.1",
+		"uuid": "^9.0.0"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.22",
+		"@types/react-dom": "^18.2.7",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"eslint": "^8.53.0",
+		"eslint-plugin-react": "^7.33.2",
+		"prettier": "^3.1.0",
+		"prop-types": "^15.8.1",
+		"vite": "^4.4.9"
+	}
 }
