--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"uuid": "^9.0.0"
 	},
 	"devDependencies": {
+		"@svgr/rollup": "^8.1.0",
 		"@types/react": "^18.2.22",
 		"@types/react-dom": "^18.2.7",
 		"@vitejs/plugin-react-swc": "^3.3.2",
